# custom-linux-kernel

./: .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  LICENSE.md  MAINTAINERS  MAINTAINERS of LINUX KERNEL  Makefile  README.md  SECURITY.md  copying.md  dependencies.md  driver.md
.github/: CODEOWNERS
Documentation/: INFO.md
arch/x86/: Kconfig  Makefile
certs/: extract-cert.c
drivers/: Kconfig  Makefile
drivers/acpi/: utils.c
drivers/base/: Makefile  Makefile.rust  dd.c  driver.c  driver_bus_ops.c  rust_driver.rs
drivers/comedi/: comedi_fops.c
drivers/extcon/: extcon-rtk-type-c.c
drivers/md/: dm-crypt.c
drivers/pci/: devres.c  iov.c  setup-bus.c  vgaarb.c
drivers/rust_core/: Kconfig  Makefile  dma_safe.c  dma_safe.rs  net_dma_safe.c  pci_safe.c  usb_dma_safe.c
drivers/staging/: Kconfig  Makefile
drivers/tty/: Kconfig  Makefile  tty_rust.rs
include/drm/: drm_gem_dma_safe.h
include/linux/: alloc_safe.h  dac_log.h  dma_safe.h  driver_bus_ops.h  energy_model_rust.h  net_dma_safe.h  page_alloc_modular.h  pci_safe.h  pelt_ring.h  spsc_ring.h  (+8 more)
init/: Kconfig
kernel/: Kconfig.sentraos_rustcore  Makefile  bootlog.rs  calls.rs  mm.rs  oom_kill.rs  panic.rs  process.rs  sched.rs  signal.c  signal.rs  vfs.rs
mm/: Makefile  Makefile.rust  oom_kill.c  page_alloc_modular.c  rust_alloc_policy.rs  rust_alloc_policy_bridge.c  rust_slab.rs  vma_isolation.h
rust/: Makefile  helpers.c
scripts/: generate_rust_target.rs
usr/: Makefile
usr/ai/daemon/: Cargo.toml
usr/ai/daemon/src/: ai_mgr.rs  main.rs
usr/ai/daemon/src/tools/: ollama.rs  opencode.rs
(+160 files in other folders)
